[package]
name = "tengu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25.0"
dirs = "4.0.0"
anyhow = "1.0.70"
serde_json = "1.0.94"
serde = { version = "1.0.158", features = ["derive"] }
tiberius = {version ="0.12.1", default-features = false, features = ["tds73"]}
tokio = {version = "1.25.0", features = ["full"]}
tokio-util = { version = "0.7.7", features = ["compat"] }
chrono = "0.4.24"
clap = { version = "4.1.12", features = ["derive"] }
tower-lsp = "0.19.0"
tiberius-derive = "0.0.2"
once_cell = "1.17.1"
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }
futures = "0.3.27"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
